--- a/src/package.json
+++ b/src/package.json
@@ -2,7 +2,7 @@
   "name": "aclimate_site",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://Minotriz02.github.io/aclimate_site/",
+  "homepage": "https://github.com/CIAT-DAPA/aclimate_site",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.2.1",
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
