--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,6 +17,7 @@ jobs:
         run: |
           cd src/
           npm ci
+          npm install -g gh-pages --save-dev
           npm run deploy
 
       # - name: Deploy 🚀
