--- a/src/package.json
+++ b/src/package.json
@@ -2,7 +2,7 @@
   "name": "aclimate_site",
   "version": "0.1.0",
   "private": false,
-  "homepage": "https://CIAT-DAPA.github.io/aclimate_site",
+  "homepage": "https://www.aclimate.org/",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.2.1",
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
@@ -13,6 +13,7 @@
     "bootstrap": "^5.2.3",
     "leaflet": "^1.9.3",
     "papaparse": "^5.3.2",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-animate-on-scroll": "^2.1.5",
     "react-bootstrap": "^2.7.0",
