--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,30 +1,18 @@
-name: Build and Deploy
+name: Deploy to GitHub Pages
 on:
   push:
     branches:
       - main
-permissions:
-  contents: write
 jobs:
-  build-and-deploy:
-    concurrency: ci-${{ github.ref }}
+  deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout 🛎️
-        uses: actions/checkout@v3
+    - name: Checkout code
+      uses: actions/checkout@v2
 
-      - name: Install and Build 🔧
-        env:
-          CI: false
-        run: |
-          cd src/
-          git config --global user.email "sebastian.lopez_Ast@uao.edu.co"
-          git config --global user.name "Sebastian Lopez"
-          npm ci
-          npm install -g gh-pages --save-dev
-          npm run deploy
-
-      - name: Deploy 🚀
-        uses: JamesIves/github-pages-deploy-action@v4
-        with:
-          folder: build 
+    - name: Build and deploy
+      uses: JamesIves/github-pages-deploy-action@v4
+      with:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        BRANCH: gh-pages
+        FOLDER: build
