--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,6 +14,7 @@ jobs:
 
       - name: Install and Build 🔧
         uses: actions/setup-node@v3
+      - name: Actions npm
         env:
           CI: false
         run: |
