--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,6 +18,7 @@ jobs:
         env:
           CI: false
         run: |
+          git config --global user.email sebastian.lopez_Ast@uao.edu.co
           cd src/
           npm ci
           npm install -g gh-pages --save-dev
