--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,26 +1,22 @@
 name: Build and Deploy
-on:
-  push:
-    branches:
-      - main
+on: [push]
 permissions:
   contents: write
 jobs:
   build-and-deploy:
+    concurrency: ci-${{ github.ref }} # Recommended if you intend to make multiple deployments in quick succession.
     runs-on: ubuntu-latest
     steps:
       - name: Checkout 🛎️
         uses: actions/checkout@v3
 
-      - name: Install and Build 🔧
-        uses: actions/setup-node@v3
-      - name: Actions npm
-        env:
-          CI: false
+      - name: Install and Build 🔧 # This example project is built using npm and outputs the result to the 'build' folder. Replace with the commands required to build your project, or remove this step entirely if your site is pre-built.
         run: |
-          git config --global user.name "Minotriz02"
-          git config --global user.email "sebastian.lopez_Ast@uao.edu.co"
-          cd src/
+          cd ./src
           npm ci
-          npm install -g gh-pages --save-dev
-          npm run deploy
+          npm run build
+
+      - name: Deploy 🚀
+        uses: JamesIves/github-pages-deploy-action@v4
+        with:
+          folder: build # The folder the action should deploy.
