--- a/src/package.json
+++ b/src/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.3",
+    "i18next": "^22.4.9",
     "leaflet": "^1.9.3",
     "papaparse": "^5.3.2",
     "prop-types": "^15.8.1",
@@ -18,6 +19,7 @@
     "react-animate-on-scroll": "^2.1.5",
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^12.1.5",
     "react-is": "^18.2.0",
     "react-leaflet": "^4.2.0",
     "react-papaparse": "^4.1.0",
