name changed and some news modified

--- a/src/public/manifest.json
+++ b/src/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Aclimate",
-  "name": "Aclimate web app",
+  "short_name": "AClimate",
+  "name": "AClimate web app",
   "icons": [
     {
       "src": "favicon.ico",
