--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,7 +15,7 @@ jobs:
           CI: false
         run: |
           cd ./src
-          npm ci
+          npm ci --legacy-peer-deps
           npm run build
 
       - name: Deploy 🚀
